laid layout for mobile next sm:

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     >
       <!-- OPINIONS+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
       <h1>Opinions</h1>
-      <div>
+      <div class="flex flex-col gap-2">
         <!-- first four (always visible)++++++++++++++++++++++++++++ -->
         <div class="flex flex-wrap justify-center gap-4 sm:gap-2">
           <!-- opinion------------------------------------------------ -->
@@ -267,6 +267,88 @@
           </div>
         </div>
         <!-- next four (hidden for mobiles)+++++++++++++++++++++++++ -->
+        <div
+          class="hidden sm:flex flex-wrap justify-center gap-4 sm:gap-2 sm:visible"
+        >
+          <!-- opinion------------------------------------------------ -->
+          <div
+            class="group flex flex-col border hover:border-2 w-full sm:w-2/5"
+          >
+            <a class="flex flex-row gap-2" href="#">
+              <h1
+                class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
+              >
+                5
+              </h1>
+              <h3 class="text-wrap font-[1.25rem] text-left">
+                It's been said before...
+              </h3>
+            </a>
+            <p class="text-sm">
+              But I am old, so I'll say it again: the Earth is flatter than an
+              ironing board, I am not crazy...
+            </p>
+            <i class="author">Grumpy Dwarf</i>
+          </div>
+          <!-- opinion------------------------------------------------ -->
+          <div
+            class="group flex flex-col border hover:border-2 w-full sm:w-2/5"
+          >
+            <a class="flex flex-row gap-2" href="#">
+              <h1
+                class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
+              >
+                6
+              </h1>
+              <h3 class="text-wrap font-[1.25rem] text-left">
+                I like to move it, move it...
+              </h3>
+            </a>
+            <p class="text-sm">
+              I like to move it, move it. I like to move it, move it. I like to
+              move it!
+            </p>
+            <i class="author">Secret Dentist</i>
+          </div>
+          <!-- opinion------------------------------------------------ -->
+          <div
+            class="group flex flex-col border hover:border-2 w-full sm:w-2/5"
+          >
+            <a class="flex flex-row gap-2" href="#">
+              <h1
+                class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
+              >
+                7
+              </h1>
+              <h3 class="text-wrap font-[1.25rem] text-left">
+                What time is it?
+              </h3>
+            </a>
+            <p class="text-sm">
+              Seriously I lost my watch. I was a golden Breitling worth 10.000$.
+              I think my boyfriend stole it...
+            </p>
+            <i class="author">I forgot</i>
+          </div>
+          <!-- opinion------------------------------------------------ -->
+          <div
+            class="group flex flex-col border hover:border-2 w-full sm:w-2/5"
+          >
+            <a class="flex flex-row gap-2" href="#">
+              <h1
+                class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
+              >
+                8
+              </h1>
+              <h3 class="text-wrap font-[1.25rem] text-left">Heziekel 25:17</h3>
+            </a>
+            <p class="text-sm">
+              And you will know, my name is the lord when I lay my vengeance
+              upon you
+            </p>
+            <i class="author">Friend of Vincent</i>
+          </div>
+        </div>
       </div>
       <div class="h-50 bg-red-900">1</div>
     </section>
