--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
     style="font-family: Noticia; font-size: 1.25rem; color: rgb(39, 39, 39)"
   >
     <header
-      class="h-16 max-w-fit py-0.5 flex justify-between content-center border-b fixed top-0 z-50 bg-amber-50"
+      class="h-16 w-full py-0.5 flex justify-between content-center border-b fixed top-0 z-50 bg-amber-50"
     >
       <div
         class="max-h-16 max-w-[85%] self-center flex flex-row justify-center content-center mx-auto"
       >
         <img
-          class="hidden sm:block"
+          class="hidden sm:block max-w-1/5 max-h-14"
           src="/Images/EoF logo BW.png"
           alt="ecko of the fox logo"
         />
-        <img src="/Images/EoF title BW.png" alt="ecko of the fox title" />
+        <img
+          class="max-w-3/5 max-h-14"
+          src="/Images/EoF title BW.png"
+          alt="ecko of the fox title"
+        />
       </div>
       <div id="hamburger-menu">
         <svg
