added weather at md:

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       >
         <img
           class="hidden sm:block max-w-1/5 max-h-14"
-          src="/Images/EoF logo BW.png"
+          src="/logos/EoF logo BW.png"
           alt="ecko of the fox logo"
         />
         <img
           class="max-w-3/5 max-h-14"
-          src="/Images/EoF title BW.png"
+          src="/logos/EoF title BW.png"
           alt="ecko of the fox title"
         />
       </div>
@@ -55,25 +55,95 @@
     </header>
     <!-- MAIN CONTENT---------------------------------------------------------------------------- -->
     <section class="flex flex-col px-2 pt-16 border-b mx-0.5">
-      <!-- edito-------------------------------------------------- -->
-      <div class="bg-blue-700 flex flex-col items-center my-0.5 border-b">
-        <h1 class="text-2xl underline my-0">Editorial</h1>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint
-          possimus ad earum! Eum rem perspiciatis quasi provident non tempore
-          similique aut fuga saepe aperiam! Modi velit deleniti ea facilis
-          harum! <br />
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit
-          eum ut quibusdam accusamus officia eveniet at consequatur, inventore
-          vero! Quibusdam sit rerum quidem dicta amet praesentium? Mollitia
-          fugit hic eveniet?
-        </p>
-        <i class="author">Frank the Fox</i>
+      <div class="flex gap-1 my-0.5 md:flex-row-reverse">
+        <!-- WEATHER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+
+        <div
+          class="hidden md:flex flex-wrap w-2/7 justify-around items-center gap-0.5 bg-amber-800"
+        >
+          <!-- city--------------------------------------------------- -->
+          <div
+            class="w-3/7 h-3/10 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
+          >
+            <img
+              src="https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-512.png"
+              alt="sunny"
+            />
+            <b>Stockholm</b>
+          </div>
+          <!-- city--------------------------------------------------- -->
+          <div
+            class="w-3/7 h-3/10 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
+          >
+            <img
+              src="https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-512.png"
+              alt="sunny"
+            />
+            <b>Stockholm</b>
+          </div>
+          <!-- city--------------------------------------------------- -->
+          <div
+            class="w-3/7 h-3/10 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
+          >
+            <img
+              src="https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-512.png"
+              alt="sunny"
+            />
+            <b>Stockholm</b>
+          </div>
+          <!-- city--------------------------------------------------- -->
+          <div
+            class="w-3/7 h-3/10 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
+          >
+            <img
+              src="https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-512.png"
+              alt="sunny"
+            />
+            <b>Stockholm</b>
+          </div>
+          <!-- city--------------------------------------------------- -->
+          <div
+            class="w-3/7 h-3/10 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
+          >
+            <img
+              src="https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-512.png"
+              alt="sunny"
+            />
+            <b>Stockholm</b>
+          </div>
+          <!-- city--------------------------------------------------- -->
+          <div
+            class="w-3/7 h-3/10 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
+          >
+            <img
+              src="https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-512.png"
+              alt="sunny"
+            />
+            <b>Stockholm</b>
+          </div>
+        </div>
+        <!-- edito++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+        <div
+          class="bg-blue-700 flex flex-col items-center my-0.5 border-b md:w-5/7"
+        >
+          <h1 class="text-2xl underline my-0">Editorial</h1>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint
+            possimus ad earum! Eum rem perspiciatis quasi provident non tempore
+            similique aut fuga saepe aperiam! Modi velit deleniti ea facilis
+            harum! <br />
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Reprehenderit eum ut quibusdam accusamus officia eveniet at
+            consequatur, inventore vero! Quibusdam sit rerum quidem dicta amet
+            praesentium? Mollitia fugit hic eveniet?
+          </p>
+          <i class="author">Frank the Fox</i>
+        </div>
       </div>
       <!-- main article------------------------------------------- -->
       <div class="bg-red-700 flex flex-col items-center content-center my-0.5">
         <h2><a href="#">ALIENS ARE ATTACKING!</a></h2>
-        <img class="max-h-36" src="/Images/EoF logo.png" alt="" />
+        <img class="max-h-36" src="/logos/EoF logo.png" alt="" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
           veritatis placeat quibusdam! Suscipit illum voluptas ducimus ab sunt,
@@ -104,7 +174,7 @@
           <p>
             <img
               class="max-w-[40%] max-h-24 float-left"
-              src="/Images/EoF logo.png"
+              src="/logos/EoF logo.png"
               alt=""
             />
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
@@ -122,7 +192,7 @@
           <p>
             <img
               class="max-w-[40%] max-h-24 float-left"
-              src="/Images/EoF logo.png"
+              src="/logos/EoF logo.png"
               alt=""
             />
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
@@ -140,7 +210,7 @@
           <p>
             <img
               class="max-w-[40%] max-h-24 float-left"
-              src="/Images/EoF logo.png"
+              src="/logos/EoF logo.png"
               alt=""
             />
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
@@ -360,10 +430,7 @@
       class="bg-[rgb(62,62,62)] w-full py-4 flex justify-around content-center"
     >
       <a class="max-w-20 self-center" href="#"
-        ><img
-          src="Images/EoF logo BW inverted.png"
-          alt="ecko of the fox logo"
-        />
+        ><img src="logos/EoF logo BW inverted.png" alt="ecko of the fox logo" />
         <i class="text-center text-amber-50 font-stretch-50%">© eckofox</i>
       </a>
       <div
