added weather at md:

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         <!-- WEATHER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
 
         <div
-          class="hidden md:flex flex-wrap w-2/7 justify-around items-center gap-0.5 bg-amber-800"
+          class="hidden md:flex flex-wrap w-2/7 justify-around items-center gap-1 my-0.5 bg-amber-800"
         >
           <!-- city--------------------------------------------------- -->
           <div
-            class="w-3/7 h-3/10 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
+            class="w-3/7 h-3/7 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
           >
             <img
               src="https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-512.png"
@@ -73,7 +73,7 @@
           </div>
           <!-- city--------------------------------------------------- -->
           <div
-            class="w-3/7 h-3/10 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
+            class="w-3/7 h-3/7 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
           >
             <img
               src="https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-512.png"
@@ -83,7 +83,7 @@
           </div>
           <!-- city--------------------------------------------------- -->
           <div
-            class="w-3/7 h-3/10 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
+            class="w-3/7 h-3/7 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
           >
             <img
               src="https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-512.png"
@@ -93,27 +93,7 @@
           </div>
           <!-- city--------------------------------------------------- -->
           <div
-            class="w-3/7 h-3/10 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
-          >
-            <img
-              src="https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-512.png"
-              alt="sunny"
-            />
-            <b>Stockholm</b>
-          </div>
-          <!-- city--------------------------------------------------- -->
-          <div
-            class="w-3/7 h-3/10 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
-          >
-            <img
-              src="https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-512.png"
-              alt="sunny"
-            />
-            <b>Stockholm</b>
-          </div>
-          <!-- city--------------------------------------------------- -->
-          <div
-            class="w-3/7 h-3/10 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
+            class="w-3/7 h-3/7 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
           >
             <img
               src="https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-512.png"
