--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     style="font-family: Noticia; font-size: 1.25rem; color: rgb(39, 39, 39)"
   >
     <header
-      class="h-16 w-full py-0.5 flex justify-between content-center border-b fixed top-0 z-50 bg-amber-50"
+      class="h-16 w-full py-0.5 flex justify-between content-center border-b fixed top-0 z-50 bg-amber-50 lg:h-28"
     >
       <div
-        class="max-h-16 max-w-[85%] self-center flex flex-row justify-center content-center mx-auto"
+        class="max-h-16 max-w-[85%] self-center flex flex-row justify-center content-center mx-auto lg:h-28"
       >
         <img
-          class="hidden sm:block max-w-1/5 max-h-14"
+          class="hidden sm:block max-w-1/5 max-h-14 lg:max-h-28"
           src="/logos/EoF logo BW.png"
           alt="ecko of the fox logo"
         />
         <img
-          class="max-w-3/5 max-h-14"
+          class="max-w-3/5 max-h-14 lg:max-h-28"
           src="/logos/EoF title BW.png"
           alt="ecko of the fox title"
         />
@@ -63,43 +63,35 @@
         >
           <!-- city--------------------------------------------------- -->
           <div
-            class="w-3/7 h-3/7 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
+            class="w-3/7 h-3/7 flex flex-col justify-center gap-1 items-center bg-red-600"
           >
-            <img
-              src="https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-512.png"
-              alt="sunny"
-            />
-            <b>Stockholm</b>
+            <img src="/wx-icons/sunny.png" alt="sunny" />
+            <b class="text-xs">Stockholm</b>
+            <i class="text-xs text-center">Eurovision fever</i>
           </div>
           <!-- city--------------------------------------------------- -->
           <div
-            class="w-3/7 h-3/7 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
+            class="w-3/7 h-3/7 flex flex-col justify-center gap-1 items-center bg-red-600"
           >
-            <img
-              src="https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-512.png"
-              alt="sunny"
-            />
-            <b>Stockholm</b>
+            <img src="/wx-icons/sunny.png" alt="sunny" />
+            <b class="text-xs">Stockholm</b>
+            <i class="text-xs text-center">Eurovision fever</i>
           </div>
           <!-- city--------------------------------------------------- -->
           <div
-            class="w-3/7 h-3/7 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
+            class="w-3/7 h-3/7 flex flex-col justify-center gap-1 items-center bg-red-600"
           >
-            <img
-              src="https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-512.png"
-              alt="sunny"
-            />
-            <b>Stockholm</b>
+            <img src="/wx-icons/sunny.png" alt="sunny" />
+            <b class="text-xs">Stockholm</b>
+            <i class="text-xs text-center">Eurovision fever</i>
           </div>
           <!-- city--------------------------------------------------- -->
           <div
-            class="w-3/7 h-3/7 flex flex-col justify-between items-center gap-0.5 text-xs text-wrap bg-red-600"
+            class="w-3/7 h-3/7 flex flex-col justify-center gap-1 items-center bg-red-600"
           >
-            <img
-              src="https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-512.png"
-              alt="sunny"
-            />
-            <b>Stockholm</b>
+            <img src="/wx-icons/sunny.png" alt="sunny" />
+            <b class="text-xs">Stockholm</b>
+            <i class="text-xs text-center">Eurovision fever</i>
           </div>
         </div>
         <!-- edito++++++++++++++++++++++++++++++++++++++++++++++++++ -->
@@ -317,7 +309,7 @@
               And you will know, my name is the lord when I lay my vengeance
               upon you
             </p>
-            <i class="author">Friend of Vincent</i>
+            <i class="author">Jules V.</i>
           </div>
         </div>
         <!-- next four (hidden for mobiles)+++++++++++++++++++++++++ -->
@@ -400,7 +392,7 @@
               And you will know, my name is the lord when I lay my vengeance
               upon you
             </p>
-            <i class="author">Friend of Vincent</i>
+            <i class="author">Jules V.</i>
           </div>
         </div>
       </div>
