--- a/index.html
+++ b/index.html
@@ -54,52 +54,93 @@
       </div>
     </header>
     <!-- MAIN CONTENT---------------------------------------------------------------------------- -->
-    <section class="flex flex-col px-2 pt-16 border-b mx-0.5">
-      <div class="flex gap-1 my-0.5 md:flex-row-reverse">
-        <!-- WEATHER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+    <section class="flex flex-col px-2 pt-16 border-b mx-0.5 lg:pt-28">
+      <!-- WEATHER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
 
+      <div
+        class="hidden md:flex flex-wrap w-full justify-around items-center gap-1 my-0.5 border-b"
+      >
+        <!-- city--------------------------------------------------- -->
         <div
-          class="hidden md:flex flex-wrap w-2/7 justify-around items-center gap-1 my-0.5 bg-amber-800"
+          class="w-2/9 flex flex-row justify-center gap-1 items-center lg:w-2/17 bg-red-600"
         >
-          <!-- city--------------------------------------------------- -->
-          <div
-            class="w-3/7 h-3/7 flex flex-col justify-center gap-1 items-center bg-red-600"
-          >
-            <img src="/wx-icons/sunny.png" alt="sunny" />
-            <b class="text-xs">Stockholm</b>
-            <i class="text-xs text-center">Eurovision fever</i>
-          </div>
-          <!-- city--------------------------------------------------- -->
-          <div
-            class="w-3/7 h-3/7 flex flex-col justify-center gap-1 items-center bg-red-600"
-          >
-            <img src="/wx-icons/sunny.png" alt="sunny" />
-            <b class="text-xs">Stockholm</b>
-            <i class="text-xs text-center">Eurovision fever</i>
-          </div>
-          <!-- city--------------------------------------------------- -->
-          <div
-            class="w-3/7 h-3/7 flex flex-col justify-center gap-1 items-center bg-red-600"
-          >
-            <img src="/wx-icons/sunny.png" alt="sunny" />
-            <b class="text-xs">Stockholm</b>
-            <i class="text-xs text-center">Eurovision fever</i>
-          </div>
-          <!-- city--------------------------------------------------- -->
-          <div
-            class="w-3/7 h-3/7 flex flex-col justify-center gap-1 items-center bg-red-600"
-          >
-            <img src="/wx-icons/sunny.png" alt="sunny" />
-            <b class="text-xs">Stockholm</b>
-            <i class="text-xs text-center">Eurovision fever</i>
+          <img src="/wx-icons/sunny.png" alt="sunny" />
+          <div class="flex flex-col justify-center">
+            <b class="text-xs">Paris</b>
+            <i class="text">Beau soleil</i>
           </div>
         </div>
+        <!-- city--------------------------------------------------- -->
+        <div
+          class="w-2/9 flex flex-row justify-center gap-1 items-center lg:w-2/17 bg-red-600"
+        >
+          <img src="/wx-icons/sunny.png" alt="sunny" />
+          <div class="flex flex-col justify-center">
+            <b class="text-xs">Stockholm</b>
+            <i class="text-xs">Eurovision fever</i>
+          </div>
+        </div>
+        <!-- city--------------------------------------------------- -->
+        <div
+          class="w-2/9 flex flex-row justify-center gap-1 items-center lg:w-2/17 bg-red-600"
+        >
+          <img src="/wx-icons/rain.png" alt="sunny" />
+          <div class="flex flex-col justify-center">
+            <b class="text-xs">London</b>
+            <i class="text-xs">as usual</i>
+          </div>
+        </div>
+        <!-- city--------------------------------------------------- -->
+        <div
+          class="w-2/9 flex flex-row justify-center gap-1 items-center lg:w-2/17 bg-red-600"
+        >
+          <img src="/wx-icons/cloudy.png" alt="sunny" />
+          <div class="flex flex-col justify-center">
+            <b class="text-xs">Tokyo</b>
+            <i class="text-xs">雲のある晴れ</i>
+          </div>
+        </div>
+
+        <!-- city--------------------------------------------------- -->
+        <div
+          class="hidden w-2/17 lg:flex flex-row justify-center gap-1 items-center bg-red-600"
+        >
+          <img src="/wx-icons/shitstorm.png" alt="sunny" />
+          <div class="flex flex-col justify-center">
+            <b class="text-xs">Washington</b>
+            <i class="text-xs">Orange wave</i>
+          </div>
+        </div>
+        <!-- city--------------------------------------------------- -->
+        <div
+          class="hidden w-2/17 lg:flex flex-row justify-center gap-1 items-center bg-red-600"
+        >
+          <img src="/wx-icons/sunny.png" alt="sunny" />
+          <div class="flex flex-col justify-center">
+            <b class="text-xs">Los Angeles</b>
+            <i class="text-xs">Star struck</i>
+          </div>
+        </div>
+        <!-- city--------------------------------------------------- -->
+        <div
+          class="hidden w-2/17 lg:flex flex-row justify-center gap-1 items-center bg-red-600"
+        >
+          <img src="/wx-icons/only_cloudy.png" alt="sunny" />
+          <div class="flex flex-col justify-center">
+            <b class="text-xs">Madrid</b>
+            <i class="text-xs">Tapas for lunch</i>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="flex flex-col px-2 border-b mx-0.5">
+      <div class="flex flex-col lg:flex-row lg:gap-1">
         <!-- edito++++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <div
-          class="bg-blue-700 flex flex-col items-center my-0.5 border-b md:w-5/7"
+          class="bg-blue-700 group flex flex-col items-center my-0.5 border-b lg:w-1/4"
         >
           <h1 class="text-2xl underline my-0">Editorial</h1>
-          <p>
+          <p class="hidden max-md:group-hover:block md:block">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint
             possimus ad earum! Eum rem perspiciatis quasi provident non tempore
             similique aut fuga saepe aperiam! Modi velit deleniti ea facilis
@@ -109,38 +150,42 @@
             consequatur, inventore vero! Quibusdam sit rerum quidem dicta amet
             praesentium? Mollitia fugit hic eveniet?
           </p>
-          <i class="author">Frank the Fox</i>
+          <i class="author hidden max-md:group-hover:block md:block"
+            >Frank the Fox</i
+          >
         </div>
-      </div>
-      <!-- main article------------------------------------------- -->
-      <div class="bg-red-700 flex flex-col items-center content-center my-0.5">
-        <h2><a href="#">ALIENS ARE ATTACKING!</a></h2>
-        <img class="max-h-36" src="/logos/EoF logo.png" alt="" />
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-          veritatis placeat quibusdam! Suscipit illum voluptas ducimus ab sunt,
-          ipsa natus eligendi quis sequi perferendis, rerum nesciunt harum eius
-          veniam nobis.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-          ipsam sequi quisquam unde consequatur nam adipisci iusto tempora.
-          Praesentium, nam corrupti! Unde, iure sequi architecto nihil est
-          provident tenetur nam?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-          ipsam sequi quisquam unde consequatur nam adipisci iusto tempora.
-          Praesentium, nam corrupti! Unde, iure sequi architecto nihil est
-          provident tenetur nam?
-        </p>
-        <i class="author">author</i>
+        <!-- main article------------------------------------------- -->
+        <div
+          class="bg-red-700 flex flex-col items-center content-center my-0.5 lg:w-3/4"
+        >
+          <h2><a href="#">ALIENS ARE ATTACKING!</a></h2>
+          <img class="max-h-36" src="/logos/EoF logo.png" alt="" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+            veritatis placeat quibusdam! Suscipit illum voluptas ducimus ab
+            sunt, ipsa natus eligendi quis sequi perferendis, rerum nesciunt
+            harum eius veniam nobis.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+            ipsam sequi quisquam unde consequatur nam adipisci iusto tempora.
+            Praesentium, nam corrupti! Unde, iure sequi architecto nihil est
+            provident tenetur nam?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+            ipsam sequi quisquam unde consequatur nam adipisci iusto tempora.
+            Praesentium, nam corrupti! Unde, iure sequi architecto nihil est
+            provident tenetur nam?
+          </p>
+          <i class="author">author</i>
+        </div>
       </div>
       <!-- SECONDARY ARTICLES+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-      <div>
+      <div class="flex flex-col lg:flex-row lg:gap-1">
         <!-- secondary article-------------------------------------- -->
         <div
-          class="bg-blue-700 flex flex-col items-center content-center my-0.5"
+          class="bg-blue-700 flex flex-col items-center content-center my-0.5 lg:w-1/4"
         >
           <h2><a href="#">Freddy cloned, Queen to reunite</a></h2>
           <p>
@@ -158,7 +203,7 @@
         </div>
         <!-- secondary article-------------------------------------- -->
         <div
-          class="bg-blue-700 flex flex-col items-center content-center my-0.5"
+          class="bg-blue-700 flex flex-col items-center content-center my-0.5 lg:w-1/4"
         >
           <h2><a href="#">Freddy cloned, Queen to reunite</a></h2>
           <p>
@@ -176,7 +221,7 @@
         </div>
         <!-- secondary article-------------------------------------- -->
         <div
-          class="bg-blue-700 flex flex-col items-center content-center my-0.5"
+          class="bg-blue-700 flex flex-col items-center content-center my-0.5 lg:w-1/4"
         >
           <h2><a href="#">Freddy cloned, Queen to reunite</a></h2>
           <p>
@@ -194,7 +239,7 @@
         </div>
         <!-- SLIDING   ARTICLES+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <div
-          class="bg-yellow-300 overflow-hidden flex flex-col gap-4 justify-around my-2"
+          class="bg-yellow-300 overflow-hidden flex flex-col gap-4 justify-around my-2 lg:w-1/4"
         >
           <!-- sliding   article-------------------------------------- -->
           <a class="sliding-article" href="#">
@@ -217,6 +262,10 @@
             <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
           </a>
           <!-- sliding   article-------------------------------------- -->
+          <a class="sliding-article" href="#">
+            <h3>Bob tells the story of his alien abduction</h3>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          </a>
           <a class="sliding-article" href="#">
             <h3>Bob tells the story of his alien abduction</h3>
             <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
