done layout for lg:

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           class="bg-red-700 flex flex-col items-center content-center my-0.5 lg:w-3/4"
         >
           <h2><a href="#">ALIENS ARE ATTACKING!</a></h2>
-          <img class="max-h-36" src="/logos/EoF logo.png" alt="" />
+          <img class="max-h-36 lg:max-h-48" src="/logos/EoF logo.png" alt="" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
             veritatis placeat quibusdam! Suscipit illum voluptas ducimus ab
@@ -185,7 +185,7 @@
       <div class="flex flex-col lg:flex-row lg:gap-1">
         <!-- secondary article-------------------------------------- -->
         <div
-          class="bg-blue-700 flex flex-col items-center content-center my-0.5 lg:w-1/4"
+          class="bg-blue-700 flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:border-r"
         >
           <h2><a href="#">Freddy cloned, Queen to reunite</a></h2>
           <p>
@@ -203,7 +203,7 @@
         </div>
         <!-- secondary article-------------------------------------- -->
         <div
-          class="bg-blue-700 flex flex-col items-center content-center my-0.5 lg:w-1/4"
+          class="bg-blue-700 flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:border-r"
         >
           <h2><a href="#">Freddy cloned, Queen to reunite</a></h2>
           <p>
@@ -221,7 +221,7 @@
         </div>
         <!-- secondary article-------------------------------------- -->
         <div
-          class="bg-blue-700 flex flex-col items-center content-center my-0.5 lg:w-1/4"
+          class="bg-blue-700 flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:pr-0.5"
         >
           <h2><a href="#">Freddy cloned, Queen to reunite</a></h2>
           <p>
@@ -281,10 +281,10 @@
       <h1>Opinions</h1>
       <div class="flex flex-col gap-2">
         <!-- first four (always visible)++++++++++++++++++++++++++++ -->
-        <div class="flex flex-wrap justify-center gap-4 sm:gap-2">
+        <div class="flex flex-wrap justify-center gap-4 sm:gap-2 bg-red-600">
           <!-- opinion------------------------------------------------ -->
           <div
-            class="group flex flex-col border hover:border-2 w-full sm:w-2/5"
+            class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
           >
             <a class="flex flex-row gap-2" href="#">
               <h1
@@ -292,7 +292,7 @@
               >
                 1
               </h1>
-              <h3 class="text-wrap font-[1.25rem] text-left">
+              <h3 class="text-wrap font-[1.25rem] text-left content-center">
                 It's been said before...
               </h3>
             </a>
@@ -300,11 +300,11 @@
               But I am old, so I'll say it again: the Earth is flatter than an
               ironing board, I am not crazy...
             </p>
-            <i class="author">Grumpy Dwarf</i>
+            <i class="author mt-auto">Grumpy Dwarf</i>
           </div>
           <!-- opinion------------------------------------------------ -->
           <div
-            class="group flex flex-col border hover:border-2 w-full sm:w-2/5"
+            class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
           >
             <a class="flex flex-row gap-2" href="#">
               <h1
@@ -312,7 +312,7 @@
               >
                 2
               </h1>
-              <h3 class="text-wrap font-[1.25rem] text-left">
+              <h3 class="text-wrap font-[1.25rem] text-left content-center">
                 I like to move it, move it...
               </h3>
             </a>
@@ -320,11 +320,11 @@
               I like to move it, move it. I like to move it, move it. I like to
               move it!
             </p>
-            <i class="author">Secret Dentist</i>
+            <i class="author mt-auto">Secret Dentist</i>
           </div>
           <!-- opinion------------------------------------------------ -->
           <div
-            class="group flex flex-col border hover:border-2 w-full sm:w-2/5"
+            class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
           >
             <a class="flex flex-row gap-2" href="#">
               <h1
@@ -332,7 +332,7 @@
               >
                 3
               </h1>
-              <h3 class="text-wrap font-[1.25rem] text-left">
+              <h3 class="text-wrap font-[1.25rem] text-left content-center">
                 What time is it?
               </h3>
             </a>
@@ -340,11 +340,11 @@
               Seriously I lost my watch. I was a golden Breitling worth 10.000$.
               I think my boyfriend stole it...
             </p>
-            <i class="author">I forgot</i>
+            <i class="author mt-auto">I forgot</i>
           </div>
           <!-- opinion------------------------------------------------ -->
           <div
-            class="group flex flex-col border hover:border-2 w-full sm:w-2/5"
+            class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
           >
             <a class="flex flex-row gap-2" href="#">
               <h1
@@ -352,13 +352,15 @@
               >
                 4
               </h1>
-              <h3 class="text-wrap font-[1.25rem] text-left">Heziekel 25:17</h3>
+              <h3 class="text-wrap font-[1.25rem] text-left content-center">
+                Heziekel 25:17
+              </h3>
             </a>
             <p class="text-sm">
               And you will know, my name is the lord when I lay my vengeance
               upon you
             </p>
-            <i class="author">Jules V.</i>
+            <i class="author mt-auto">Jules V.</i>
           </div>
         </div>
         <!-- next four (hidden for mobiles)+++++++++++++++++++++++++ -->
@@ -367,7 +369,7 @@
         >
           <!-- opinion------------------------------------------------ -->
           <div
-            class="group flex flex-col border hover:border-2 w-full sm:w-2/5"
+            class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
           >
             <a class="flex flex-row gap-2" href="#">
               <h1
@@ -375,11 +377,11 @@
               >
                 5
               </h1>
-              <h3 class="text-wrap font-[1.25rem] text-left">
+              <h3 class="text-wrap font-[1.25rem] text-left content-center">
                 It's been said before...
               </h3>
             </a>
-            <p class="text-sm">
+            <p class="text-sm mt-auto">
               But I am old, so I'll say it again: the Earth is flatter than an
               ironing board, I am not crazy...
             </p>
@@ -387,7 +389,7 @@
           </div>
           <!-- opinion------------------------------------------------ -->
           <div
-            class="group flex flex-col border hover:border-2 w-full sm:w-2/5"
+            class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
           >
             <a class="flex flex-row gap-2" href="#">
               <h1
@@ -395,11 +397,11 @@
               >
                 6
               </h1>
-              <h3 class="text-wrap font-[1.25rem] text-left">
+              <h3 class="text-wrap font-[1.25rem] text-left content-center">
                 I like to move it, move it...
               </h3>
             </a>
-            <p class="text-sm">
+            <p class="text-sm mt-auto">
               I like to move it, move it. I like to move it, move it. I like to
               move it!
             </p>
@@ -407,7 +409,7 @@
           </div>
           <!-- opinion------------------------------------------------ -->
           <div
-            class="group flex flex-col border hover:border-2 w-full sm:w-2/5"
+            class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
           >
             <a class="flex flex-row gap-2" href="#">
               <h1
@@ -415,7 +417,7 @@
               >
                 7
               </h1>
-              <h3 class="text-wrap font-[1.25rem] text-left">
+              <h3 class="text-wrap font-[1.25rem] text-left content-center">
                 What time is it?
               </h3>
             </a>
@@ -423,11 +425,11 @@
               Seriously I lost my watch. I was a golden Breitling worth 10.000$.
               I think my boyfriend stole it...
             </p>
-            <i class="author">I forgot</i>
+            <i class="author mt-auto">I forgot</i>
           </div>
           <!-- opinion------------------------------------------------ -->
           <div
-            class="group flex flex-col border hover:border-2 w-full sm:w-2/5"
+            class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
           >
             <a class="flex flex-row gap-2" href="#">
               <h1
@@ -435,20 +437,21 @@
               >
                 8
               </h1>
-              <h3 class="text-wrap font-[1.25rem] text-left">Heziekel 25:17</h3>
+              <h3 class="text-wrap font-[1.25rem] text-left content-center">
+                Heziekel 25:17
+              </h3>
             </a>
             <p class="text-sm">
               And you will know, my name is the lord when I lay my vengeance
               upon you
             </p>
-            <i class="author">Jules V.</i>
+            <i class="author mt-auto">Jules V.</i>
           </div>
         </div>
       </div>
-      <div class="h-50 bg-red-900">1</div>
     </section>
     <footer
-      class="bg-[rgb(62,62,62)] w-full py-4 flex justify-around content-center"
+      class="bg-[rgb(62,62,62)] w-full mt-4 py-4 flex justify-around content-center"
     >
       <a class="max-w-20 self-center" href="#"
         ><img src="logos/EoF logo BW inverted.png" alt="ecko of the fox logo" />
