fixed small design flaws

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       >
         <!-- city--------------------------------------------------- -->
         <div
-          class="w-2/9 flex flex-row justify-center gap-1 items-center lg:w-2/17 bg-red-600"
+          class="w-2/9 flex flex-row justify-center gap-1 items-center lg:w-2/17 0"
         >
           <img src="/wx-icons/sunny.png" alt="sunny" />
           <div class="flex flex-col justify-center">
@@ -72,7 +72,7 @@
         </div>
         <!-- city--------------------------------------------------- -->
         <div
-          class="w-2/9 flex flex-row justify-center gap-1 items-center lg:w-2/17 bg-red-600"
+          class="w-2/9 flex flex-row justify-center gap-1 items-center lg:w-2/17"
         >
           <img src="/wx-icons/sunny.png" alt="sunny" />
           <div class="flex flex-col justify-center">
@@ -82,7 +82,7 @@
         </div>
         <!-- city--------------------------------------------------- -->
         <div
-          class="w-2/9 flex flex-row justify-center gap-1 items-center lg:w-2/17 bg-red-600"
+          class="w-2/9 flex flex-row justify-center gap-1 items-center lg:w-2/17"
         >
           <img src="/wx-icons/rain.png" alt="sunny" />
           <div class="flex flex-col justify-center">
@@ -92,7 +92,7 @@
         </div>
         <!-- city--------------------------------------------------- -->
         <div
-          class="w-2/9 flex flex-row justify-center gap-1 items-center lg:w-2/17 bg-red-600"
+          class="w-2/9 flex flex-row justify-center gap-1 items-center lg:w-2/17"
         >
           <img src="/wx-icons/cloudy.png" alt="sunny" />
           <div class="flex flex-col justify-center">
@@ -103,7 +103,7 @@
 
         <!-- city--------------------------------------------------- -->
         <div
-          class="hidden w-2/17 lg:flex flex-row justify-center gap-1 items-center bg-red-600"
+          class="hidden w-2/17 lg:flex flex-row justify-center gap-1 items-center"
         >
           <img src="/wx-icons/shitstorm.png" alt="sunny" />
           <div class="flex flex-col justify-center">
@@ -113,7 +113,7 @@
         </div>
         <!-- city--------------------------------------------------- -->
         <div
-          class="hidden w-2/17 lg:flex flex-row justify-center gap-1 items-center bg-red-600"
+          class="hidden w-2/17 lg:flex flex-row justify-center gap-1 items-center"
         >
           <img src="/wx-icons/sunny.png" alt="sunny" />
           <div class="flex flex-col justify-center">
@@ -123,7 +123,7 @@
         </div>
         <!-- city--------------------------------------------------- -->
         <div
-          class="hidden w-2/17 lg:flex flex-row justify-center gap-1 items-center bg-red-600"
+          class="hidden w-2/17 lg:flex flex-row justify-center gap-1 items-center"
         >
           <img src="/wx-icons/only_cloudy.png" alt="sunny" />
           <div class="flex flex-col justify-center">
@@ -133,12 +133,12 @@
         </div>
       </div>
     </section>
-    <section class="flex flex-col px-2 border-b mx-0.5">
-      <div class="flex flex-col lg:flex-row lg:gap-1">
+    <section
+      class="flex flex-col px-2 border-b mx-0.5 lg:max-w-[1300px] lg:mx-auto lg:border-0"
+    >
+      <div class="flex flex-col lg:flex-row lg:gap-4">
         <!-- edito++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-        <div
-          class="bg-blue-700 group flex flex-col items-center my-0.5 border-b lg:w-1/4"
-        >
+        <div class="group flex flex-col items-center my-0.5 border-b lg:w-1/4">
           <h1 class="text-2xl underline my-0">Editorial</h1>
           <p class="hidden max-md:group-hover:block md:block">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint
@@ -155,26 +155,19 @@
           >
         </div>
         <!-- main article------------------------------------------- -->
-        <div
-          class="bg-red-700 flex flex-col items-center content-center my-0.5 lg:w-3/4"
-        >
+        <div class="flex flex-col items-center content-center my-0.5 lg:w-3/4">
           <h2><a href="#">ALIENS ARE ATTACKING!</a></h2>
           <img class="max-h-36 lg:max-h-48" src="/logos/EoF logo.png" alt="" />
-          <p>
+          <p class="lg:columns-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
             veritatis placeat quibusdam! Suscipit illum voluptas ducimus ab
             sunt, ipsa natus eligendi quis sequi perferendis, rerum nesciunt
-            harum eius veniam nobis.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-            ipsam sequi quisquam unde consequatur nam adipisci iusto tempora.
-            Praesentium, nam corrupti! Unde, iure sequi architecto nihil est
-            provident tenetur nam?
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-            ipsam sequi quisquam unde consequatur nam adipisci iusto tempora.
+            harum eius veniam nobis. Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Voluptates ipsam sequi quisquam unde consequatur
+            nam adipisci iusto tempora. Praesentium, nam corrupti! <br />
+            Unde, iure sequi architecto nihil est provident tenetur nam? Lorem
+            ipsum dolor sit amet consectetur adipisicing elit. Voluptates ipsam
+            sequi quisquam unde consequatur nam adipisci iusto tempora.
             Praesentium, nam corrupti! Unde, iure sequi architecto nihil est
             provident tenetur nam?
           </p>
@@ -182,10 +175,10 @@
         </div>
       </div>
       <!-- SECONDARY ARTICLES+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-      <div class="flex flex-col lg:flex-row lg:gap-1">
+      <div class="flex flex-col lg:flex-row lg:gap-1 lg:border-t">
         <!-- secondary article-------------------------------------- -->
         <div
-          class="bg-blue-700 flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:border-r"
+          class="flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:border-r"
         >
           <h2><a href="#">Freddy cloned, Queen to reunite</a></h2>
           <p>
@@ -203,7 +196,7 @@
         </div>
         <!-- secondary article-------------------------------------- -->
         <div
-          class="bg-blue-700 flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:border-r"
+          class="flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:border-r"
         >
           <h2><a href="#">Freddy cloned, Queen to reunite</a></h2>
           <p>
@@ -221,7 +214,7 @@
         </div>
         <!-- secondary article-------------------------------------- -->
         <div
-          class="bg-blue-700 flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:pr-0.5"
+          class="flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:pr-0.5"
         >
           <h2><a href="#">Freddy cloned, Queen to reunite</a></h2>
           <p>
@@ -239,7 +232,7 @@
         </div>
         <!-- SLIDING   ARTICLES+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <div
-          class="bg-yellow-300 overflow-hidden flex flex-col gap-4 justify-around my-2 lg:w-1/4"
+          class="overflow-hidden flex flex-col gap-4 justify-around my-2 lg:w-1/4"
         >
           <!-- sliding   article-------------------------------------- -->
           <a class="sliding-article" href="#">
@@ -275,13 +268,13 @@
     </section>
     <!-- SECONDARY CONTENT----------------------------------------------------------------------- -->
     <section
-      class="flex flex-col items-center px-2 border-b mx-0.5 text-justify"
+      class="flex flex-col items-center px-2 border-b mx-0.5 text-justify border-t lg:max-w-[1300px] lg:mx-auto"
     >
       <!-- OPINIONS+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-      <h1>Opinions</h1>
+      <h1 class="underline">Opinion Columnists</h1>
       <div class="flex flex-col gap-2">
         <!-- first four (always visible)++++++++++++++++++++++++++++ -->
-        <div class="flex flex-wrap justify-center gap-4 sm:gap-2 bg-red-600">
+        <div class="flex flex-wrap justify-center gap-4 sm:gap-2">
           <!-- opinion------------------------------------------------ -->
           <div
             class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
