--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@
         </ul>
       </div>
     </header>
-    <!-- MAIN CONTENT---------------------------------------------------------------------------- -->
-    <section class="flex flex-col px-2 pt-16 border-b mx-0.5 lg:pt-28">
-      <!-- WEATHER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
 
+    <!-- WEATHER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+    <section class="flex flex-col px-2 pt-16 mx-0.5 lg:pt-28 lg:border-b">
       <div
-        class="hidden md:flex flex-wrap w-full justify-around items-center gap-1 my-0.5 border-b"
+        class="hidden md:flex flex-wrap w-full justify-around items-center gap-1 my-0.5"
       >
         <!-- city--------------------------------------------------- -->
         <div
@@ -133,6 +132,7 @@
         </div>
       </div>
     </section>
+    <!-- MAIN CONTENT---------------------------------------------------------------------------- -->
     <section
       class="flex flex-col px-2 border-b mx-0.5 lg:max-w-[1300px] lg:mx-auto lg:border-0"
     >
@@ -268,11 +268,11 @@
     </section>
     <!-- SECONDARY CONTENT----------------------------------------------------------------------- -->
     <section
-      class="flex flex-col items-center px-2 border-b mx-0.5 text-justify border-t lg:max-w-[1300px] lg:mx-auto"
+      class="flex flex-col items-center px-2 pb-1 mx-0.5 text-justify border-t lg:max-w-[1300px] lg:mx-auto"
     >
       <!-- OPINIONS+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
       <h1 class="underline">Opinion Columnists</h1>
-      <div class="flex flex-col gap-2">
+      <div class="flex flex-col gap-2 pb-1 border-b">
         <!-- first four (always visible)++++++++++++++++++++++++++++ -->
         <div class="flex flex-wrap justify-center gap-4 sm:gap-2">
           <!-- opinion------------------------------------------------ -->
